resources/tests/invalid_syntax/primary.ct
//Error: Expected an expression!
//1
fn hello()->i32: +=;